dnl ---
dnl Process this file with autoconf to produce a configure script.
dnl ---
AC_INIT(src/ecawave.h)

dnl ---
dnl Init automake
dnl ---
AM_INIT_AUTOMAKE(ecawave, 0.2.3d3)
AM_CONFIG_HEADER(config.h)

dnl ---
dnl Checks for programs.
dnl ---
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_PROG_INSTALL

ACLOCAL=aclocal
AUTOMAKE=automake
AUTOCONF=autoconf
AC_SUBST(ACLOCAL)
AC_SUBST(AUTOCONF)
AC_SUBST(AUTOMAKE)

dnl ---
dnl Set CXXFLAGS.
dnl ---
CXXFLAGS="-O2 -D_REENTRANT -DNDEBUG -ffast-math"
dnl CXXFLAGS="-O2 -D_REENTRANT -fomit-frame-pointer -finline-functions -ffast-math"

AC_ARG_ENABLE(debug,
[  --enable-debug		  Enable debugging (default = no)],
include_debug=yes)
AM_CONDITIONAL(INCLUDE_DEBUG, test x$include_debug = xyes)
if test x$include_debug = xyes; then
CXXFLAGS="-D_REENTRANT -DENABLE_DBC -g -Wall -Wstrict-prototypes -pedantic"
fi                                     

dnl ---
dnl Ecasound libs
dnl ---
if test x$include_debug = xyes; then
	AC_MSG_CHECKING(for libecasound_debug)
	AC_CHECK_LIB(ecasound_debug, main,AC_MSG_RESULT(found),AC_MSG_ERROR([** libecasound_debug not installed/found **]),-lkvutils)
else
	AC_MSG_CHECKING(for libecasound)
	AC_CHECK_LIB(ecasound, main,AC_MSG_RESULT(found),AC_MSG_ERROR([** libecasound not installed/found **]),-lkvutils)
fi

AC_CHECK_LIBECASOUND(5)

dnl ---
dnl POSIX.4 threads
dnl ---
AC_CHECK_LIB(pthread,pthread_create, ,
	AC_CHECK_LIB(c_r,pthread_create, 
		LDFLAGS="-pthreads",	
		AC_MSG_ERROR([** POSIX.4 threads not installed or broken **])))

dnl ---
dnl Checks for header files.
dnl ---
AC_STDC_HEADERS

dnl ---
dnl Checks for typedefs, structures, and compiler characteristics.
dnl ---
dnl AC_C_CONST
dnl AC_C_INLINE

dnl ---
dnl Check for qt
dnl ---
AC_PATH_QT_2
if test x$qt_includes = x ; then
	AC_MSG_ERROR([** Couldn't find Qt header files! **])
fi
if test x$qt_libraries = x ; then
	AC_MSG_ERROR([** Couldn't find Qt libries! **])
fi

dnl ---
dnl Create outputs 
dnl ---
AC_OUTPUT([
Makefile
src/Makefile
Documentation/Makefile
])
