dnl ---
dnl Process this file with autoconf to produce a configure script.
dnl ---
AC_INIT(kvutils.h)

dnl ---
dnl Init automake
dnl ---
AM_INIT_AUTOMAKE(kvutils,1.0)

dnl ---
dnl Checks for programs.
dnl ---
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL
AC_PROG_INSTALL

ACLOCAL=aclocal
AUTOMAKE=automake
AUTOCONF=autoconf
AC_SUBST(ACLOCAL)
AC_SUBST(AUTOCONF)
AC_SUBST(AUTOMAKE)

dnl ---
dnl Checks for header files.
dnl ---
AC_STDC_HEADERS

dnl ---
dnl Checks for typedefs, structures, and compiler characteristics.
dnl ---
AC_C_CONST

dnl ---
dnl Create outputs 
dnl ---
AC_OUTPUT(Makefile)
